--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "api": "json-server --watch db.json --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:all": "concurrently \"npm run api\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
